# Helios-IDE

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: ActivityBar.cpp.BF2E5AB5FEBBE3EA.idx  ActivityBar.h.471FC830C8C4FFA6.idx  BreadcrumbsBar.cpp.8CBA6031ACC4C313.idx  BreadcrumbsBar.h.8D092CC29F307D43.idx  Code.cpp.AB350883A7B1AECE.idx  Code.h.F3FA1499E51C86E4.idx  CompilerPanel.cpp.3963053AD3D62791.idx  CompilerPanel.h.D246A1F354A817A7.idx  ContextManager.cpp.EE49A0047D64A98B.idx  ContextManager.h.7CD22AE8FBEB8960.idx  DiagnosticsPanel.cpp.2DD5D7F2B02DB7D9.idx  DiagnosticsPanel.h.CEB8DD14F1BF953F.idx  FileTreePanel.cpp.66E191CC8099016B.idx  FileTreePanel.h.05C2BBD94408DB2D.idx  FindReplaceBar.cpp.723BF29E3309B0CE.idx  FindReplaceBar.h.9CA02AE8B10786C2.idx  LspClient.cpp.7251C94E230D6BE4.idx  LspClient.h.1C27B39087999FDB.idx  LspCompletionModel.cpp.47991E3D1FF5F86D.idx  LspCompletionModel.h.9A7F681A40095757.idx  SnippetManager.cpp.CDF89F288A829EFD.idx  SnippetManager.h.BBB303C4B7472926.idx  Syntax.cpp.D7087D27429A3AF6.idx  Syntax.h.CDE86F5A899A043D.idx  main.cpp.B5CCA65CC7EB1B86.idx
.github/scoop/bucket/: helios.json
.github/workflows/: build-artifact.yml  create-release.yml  package-managers.yml  update-package.yml
docs/: ide-roadmap.md  zith-lsp-api-requirements.md
editor/: ActivityBar.cpp  BreadcrumbsBar.cpp  BreadcrumbsBar.h  Code.cpp  Code.h  CompilerPanel.cpp  CompilerPanel.h  ContextManager.cpp  ContextManager.h  DiagnosticsPanel.cpp  DiagnosticsPanel.h  FileTreePanel.cpp  FileTreePanel.h  FindReplaceBar.cpp  FindReplaceBar.h  GitPanel.cpp  GitPanel.h  LspClient.cpp  LspClient.h  LspCompletionModel.cpp  LspCompletionModel.h  MainWindow.cpp  MainWindow.h  SearchPanel.h  SettingsPanel.cpp  SettingsPanel.h  SnippetManager.cpp  SnippetManager.h  Syntax.cpp  Syntax.h  ZithToolchainManager.cpp  ZithToolchainManager.h  resources.qrc  zith-snippets.json
editor/core/: AppearanceController.cpp  AppearanceController.h  MainWindow.cpp  MainWindow.h  SnippetManager.h  ThemeManager.cpp  ThemeManager.h  TomlSettingsStore.cpp  TomlSettingsStore.h  TranslationManager.cpp  TranslationManager.h  ZithToolchainManager.cpp  ZithToolchainManager.h
editor/editor/: Code.cpp  Code.h  LspClient.cpp  LspClient.h  Syntax.cpp  Syntax.h  VimMotionController.cpp  VimMotionController.h
editor/panels/: DiagnosticsPanel.cpp  DiagnosticsPanel.h  FileTreePanel.cpp  FileTreePanel.h  GitPanel.cpp  GitPanel.h  LspManagerDialog.cpp  LspManagerDialog.h  OutlinePanel.cpp  OutlinePanel.h  PreferencesDialog.cpp  PreferencesDialog.h  ReferencesPanel.cpp  ReferencesPanel.h  SearchPanel.cpp  SettingsPanel.cpp  SettingsPanel.h  ShortcutsDialog.cpp  ShortcutsDialog.h  VimHelpDialog.cpp  VimHelpDialog.h  WelcomeWidget.cpp  WelcomeWidget.h
editor/widgets/: ActivityBar.cpp  ActivityBar.h  BreadcrumbsBar.cpp  FindReplaceBar.cpp  FindReplaceBar.h  ProjectTreeModel.cpp  ProjectTreeModel.h
i18n/: en-US.json  pt-BR.json
packaging/homebrew/: helios.rb
scripts/: install.ps1  install.sh
tests/: test_helios.cpp
themes/: colormind-desert.json  colormind-midnight.json  helios-blue-dark.json  helios-carbon-dark.json  helios-dark.json  helios-forest-dark.json  helios-gold-dark.json  helios-light.json  helios-red-dark.json  helios-violet-dark.json
